# gore_os

./: .env.example  .gitignore  .knowledge-resolver.yml  .windsurfrules  AGENTS.md  CLAUDE.md  GORE DAL Categorical Architecture.md  INDEX.md  Integrate Budget 2026 Updates.md  JOURNAL.md  MANIFESTO.md  README.md  REFACTORING_SUMMARY.md  REMEDIATION_SUMMARY_v3.1.md  TASKS.md  WS_MANIFEST.yml  backlog_organizado.md  browse.md  catalog_master_goreos.yml  descripcion_reuniones_equipo.md  development_guide.md  docker-compose.yml  docker-compose.yml.bak  entity_diagram.mmd  especificaciones.md  generate_diagram.py  gestion.md  informe_tecnico_denuncia_ptd.md  package.json  planclaude.md  pyproject.toml  remaining_stories.txt  stack.md  trazabilidad_gore_4_0.md  tsconfig.json  turbo.json  user_journeys.md  user_stories_granulares_para_titi.md  users.md  uso_viajes.md  (+2 more)
architecture/: Omega_GORE_OS_Definition_v3.0.0.md  stack.md
archive/: historias usuarios expandidas.yml
blueprint_goreos/: vision_general.md
catalog/: catalog_master_goreos.yml
db/: README.md
docs/: GORE_OS KODA Artifact Generation.md  README.md  auditoria_stories_global.md  backlog.md  consolidated_stories.md  diseno_gore_os.md  reporte_salud_supermodelo_v1.md  reporte_salud_supermodelo_v2.md  reporte_semantica_supermodelo_v1.md  reporte_semantica_supermodelo_v2.md  stack_tecnologias.md  user_stories_consolidadas_gore_os.md  walkthrough.md
eliminar/: auditoria_model_goreos_2026-01-27.md
etl/: Dockerfile  MIGRATION_READINESS.yml  MIGRATION_WALKTHROUGH.md  migrate_complete.py  migrate_montos.py  qa_consolidated_report.json  requirements.txt
goreos/: README.md
model/: README.md  _taxonomia_tags.md  _us_process_ref_ids_extracted.txt  categorical_matrix_report.md  goreos_us_model_complete.sql  model_health_report.json  mute_roles_report.md  role_classification_report.md  role_story_matching_report.md  us_model_complete.yml  validation_report_v2.json
ontology/: ontologia_categorica_goreos.md
requirements/: base.txt  dev.txt  etl.txt  flask.txt  streamlit.txt
schemas/: README.md  capability.schema.json  entity.schema.json  koda-schema.json  module.schema.json  process.schema.json  profunctor.schema.json  role.schema.json  story.schema.json
scripts/: add_as_a_to_stories.py  add_as_a_to_stories_v2.py  add_as_a_to_stories_v3.py  add_name_to_stories.py  audit_entities.py  fix_broken_story_roles.py  fix_yaml_syntax.py  fix_yaml_syntax_v2.py  generate_missing_entities.py  phase2_verification.py  sanitize_roles.py  setup-keycloak.sh  setup_dev_env.sh  verify_model.sh
scripts_auxiliares/: analyze_duplication.py  audit_roles_integrity.py  capability_consolidation.py  compose_domains.py  deep_refactor_functor.py  enhanced_dedup.py  extract_modules_processes.py  merge_to_v3.py  (+9 more)
(+9395 files in other folders)
