[project]
name = "goreos"
version = "3.1.0"
description = "Sistema Operativo Institucional - Gobierno Regional de Ñuble"
authors = [
    {name = "GORE Ñuble", email = "desarrollo@gorenuble.cl"}
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "Proprietary"}

dependencies = [
    "pandas>=2.0.0",
    "pyyaml>=6.0",
    "psycopg2-binary>=2.9.9",
    "python-dotenv>=1.0.0",
    "sqlalchemy>=2.0.30",
]

[project.optional-dependencies]
streamlit = [
    "streamlit>=1.28.0",
    "plotly>=5.18.0",
    "numpy>=1.24.0",
]
flask = [
    "flask>=3.0.3",
    "flask-sqlalchemy>=3.1.1",
    "flask-login>=0.6.3",
    "flask-wtf>=1.2.1",
    "gunicorn>=22.0.0",
    "pydantic>=2.10.0",
    "celery>=5.3.0",
    "redis>=5.0.0",
]
etl = [
    "duckdb==0.9.2",
    "networkx>=3.0",
    "numpy>=1.24.0",
    "plotly>=5.18.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-flask>=1.2.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "ipython>=8.0.0",
]
all = [
    "goreos[streamlit,flask,etl,dev]",
]

[project.urls]
Homepage = "https://github.com/gorenuble/goreos"
Documentation = "https://github.com/gorenuble/goreos/blob/master/INDEX.md"
Repository = "https://github.com/gorenuble/goreos"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ['py311']
exclude = '''
/(
    \.git
  | \.venv
  | \.venv_*
  | __pycache__
  | build
  | dist
  | \.eggs
)/
'''

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]  # Line too long (handled by black)
target-version = "py311"
exclude = [
    ".git",
    ".venv",
    ".venv_*",
    "__pycache__",
    "build",
    "dist",
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # Unused imports in __init__.py are ok

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = [
    "--verbose",
    "--color=yes",
    "--strict-markers",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
exclude = [
    "^build/",
    "^\\.venv/",
]

[tool.coverage.run]
source = ["goreos"]
omit = [
    "*/tests/*",
    "*/migrations/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
